<resources>
    <string name="app_name">Retailer App Medicento</string>
    <string-array name="slots">
        <item>Slot 1</item>
        <item>Slot 2</item>
    </string-array>
    <string-array name="state">
        <item>Select State</item>
        <item>Slot 2</item>
    </string-array>
    <string-array name="city">
        <item>Select City</item>
        <item>Slot 2</item>
    </string-array>
    <string-array name="pharma">
        <item>Lakshmi Medicals</item>
        <item>Abbott Laboratories</item>
        <item>MediShop</item>
    </string-array>
    <string-array name="select_reason">
        <item>Select return reason</item>
        <item>Items were damaged.</item>
        <item>Issue with scheme/discount</item>
        <item>I found a better scheme/discount.</item>
        <item>Unmatched Item.</item>
        <item>Items were already expired</item>
    </string-array>
    <string-array name="area">
        <item>Select Area</item>
        <item>100 Feet Ring Road</item>
        <item>10th Cross Road</item>
        <item>1st Cross Road</item>
        <item>1st Stage BTM Layout</item>
        <item>4th Block</item>
        <item>5th Block</item>
        <item>5th Cross Road, 35th Main Road</item>
        <item>5th Phase</item>
        <item>Kormangla</item>
        <item>Bellandur</item>
        <item>Cox Town</item>
        <item>HSR Layout</item>
        <item>Rajajinagar</item>
        <item>Frazer Town</item>
        <item>Whitefield</item>
    </string-array>
    <string-array name="medicines">
        <item>Crocin</item>
        <item>Paracetamol</item>
        <item>Asprin</item>
    </string-array>
    <string name="fb_app_id">326345144817030</string>
    <string name="account_kit_client_token">b7e30e2b8b80af58067baa6ff04cbaed</string>
    <string name="ak_login_protocol_scheme">akb7e30e2b8b80af58067baa6ff04cbaed</string>
    <string name="title_activity_place_orders">PlaceOrdersActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medicento</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_proceed">Proceed</string>
    <string name="area_prompt">Select Area</string>
    <string name="pharmacy_prompt">Select Pharmacy</string>
    <string name="fetch_area_action">Fetch area action</string>
    <string name="fetch_pharmacy_action">Fetch pharmacy action</string>
    <string name="login_action">Login action</string>
    <string name="fetch_medicine_action">Fetch Medicine Action</string>
    <string name="place_order_action">Place Order Action</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up"><u>SIGN UP</u></string>
    <string name="medicento_logo">Medicento Logo</string>
    <string name="pharmacy_login">Pharmacy Login</string>
    <string name="registered_4_digit_pharmacode">Registered 4-digit Pharma Code :</string>
    <string name="enter_pharma_code">Enter Pharma Code</string>
    <string name="forget_pharmacode">Forgot PharmaCode?</string>
    <string name="please_call_us_91_8548008190">Please Call Us : +91 - 8548008190</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with">----- OR LOGIN WITH -----</string>
    <string name="dont_have_account_yet">Dont have account yet ?</string>
    <string name="by_joining_you_agree_to_medicento_s">By joining you agree to Medicento\'s</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="pharmacy_registration">Pharmacy Registration</string>
    <string name="alreday_have_an_promocode_login_here">Already have a Pharmacode?</string>
    <string name="create_account">Create Account</string>
    <string name="by_clicking_create_account_you_agree_to_the_medicento">By Clicking Create Account, You Agree to the</string>
    <string name="ruppe_symbol">Rs.</string>
    <string name="pharmacode">pharmacode :</string>
    <string name="order_mode"><b>Order Mode</b>: Retailer App</string>
    <string name="order_person_name"><b>Order Person</b></string>
    <string name="summary"><b><u>Medicento Retailer Order Summary</u></b></string>
    <string name="please_find_below_details"><u>Please find your login credentials :</u></string>
    <string name="TAG">PlaceOrderActivity</string>
    <string name="new_version_is_available_n_please_update_app">New Version is available.\nPlease Update App</string>
    <string name="we_couldn_t_find_your_email_id_mobile_no">We Couldn\'t find your \n Email ID/ Mobile No.</string>
    <string name="please_re_enter_or_get_in_touch_with_us_at_91_9731785240">Please Re-enter or get in \n touch with us at (+91)-9731785240</string>
    <string name="already_have_a_pharmacode">Already Have a PharmaCode?</string>
    <string name="login_here">LOGIN HERE</string>
    <string name="oops_nno_internet">OOPS! No Internet</string>
    <string name="oops_seems_your_internet_connection_is_too_slow_please_wait_for_a_moment_and_retry_enjoying_your_favorite_app">Oops, seems your internet connection is too slow, Please wait for a moment and retry enjoying your favorite app.</string>
    <string name="your_pharma_code_nxxxx">Your Pharma Code :\n<b>XXXX</b></string>
    <string name="your_pharma_code">Your Pharma Code :\n<b>XXXX</b></string>
    <string name="your_registered_mobile_no_nemail_id_xxxx">Your Registered Mobile No. /  Email ID : <b>XXXX</b></string>
    <string name="cart_total_6_items_inr_2430">Cart Total (0 items) : <b>INR </b></string>
    <string name="prices_are_negotiable_basis_the_quantity_please_click_on_call_to_order_for_clarification">Prices are negotiable basis the Order Quantity.Please click on <b>Call to Order</b> for clarification.</string>
</resources>
