<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/relative"
    tools:context=".SignUpActivity"
    android:background="@color/colorBackground">

    <ImageView
        android:contentDescription="@string/medicento_logo"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:id="@+id/medicento_logo"
        android:layout_width="120dp"
        android:layout_marginBottom="10dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/mdlf" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/medicento_logo"
        android:id="@+id/loginlayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"
                android:text="@string/pharmacy_login"
                android:textStyle="bold"
                android:id="@+id/sign_in"
                android:background="#05C5CE"
                android:textColor="#000" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:id="@+id/pharma"
                android:layout_height="wrap_content"
                android:text="@string/registered_4_digit_pharmacode"
                android:textColor="@color/colorAccent" />

            <EditText
                android:background="@drawable/border"
                android:id="@+id/user_code_tv"
                android:autofillHints="Enter Code "
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pharma_code"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="#0000ff"
                android:text="@string/forget_pharmacode"
                android:layout_marginLeft="10dp"
                android:textSize="12sp"
                android:focusable="true"
                android:id="@+id/forget"
                android:layout_marginTop="5dp"
                android:background="#ffffff"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/loginlayout"
        android:layout_height="wrap_content"
        android:background="@color/official_color"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:layout_below="@id/sign_in_btn"
        android:gravity="center"
        android:id="@+id/or"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/social"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:weightSum="9"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/or" >

        <ImageView
        android:contentDescription="facebook"
        android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/facebook_login"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook_circular_logo" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/twitter_login"
            android:src="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/google_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_plus"
            android:layout_weight="3"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_above="@id/joining"
        android:layout_toLeftOf="@id/signUp"
        android:text="@string/dont_have_account_yet"
        android:layout_toStartOf="@id/signUp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUp"
        android:text="@string/sign_up"
        android:layout_above="@id/joining"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:textColor="#0000ff"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/joining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@id/termsOfService"
        android:text="@string/by_joining_you_agree_to_medicento_s"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/termsOfService"
        android:text="@string/terms_of_service"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textColor="#0000ff"
        android:textSize="12sp" />

    <ProgressBar
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_sign_up"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

</RelativeLayout>
