<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/sign_up_layout"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignUpPharmacyActivity">

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_above="@id/terms_of_service"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:inputType="textCapWords"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Shop Name *"
            android:id="@+id/shop_name"
            android:maxLines="1"
            />

        <Spinner
            android:textSize="11sp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state_spinner"
            />

        <Spinner
            android:textSize="11sp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city_spinner"
            />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:textSize="11sp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/area_spinner"
                    android:layout_toLeftOf="@+id/add"
                    android:layout_marginRight="5dp"
                    />

                <Button
                    android:id="@+id/add"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/ic_add_plus"
                    android:layout_alignParentRight="true"
                    android:layout_width="20dp"
                    android:background="@android:color/transparent"
                    android:layout_height="20dp" />

            </RelativeLayout>


            <EditText
                android:inputType="textCapWords"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shop_address"
                android:hint="Address *"
                android:maxLines="1"
                />


            <EditText
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/owner_pincode"
                android:hint="Pincode"
                android:inputType="number"
                android:maxLines="1"
                />

            <EditText
                android:inputType="textCapWords"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/owner_name"
                android:hint="Owner Name"
                android:maxLines="1"
                />

            <EditText
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_number"
                android:hint="Phone Number *"
                android:inputType="phone"
                />

            <EditText
                android:textSize="13sp"
                android:hint="Email Address *"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drug_license"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:hint="Drug License Number *"
                />

            <EditText
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gst_license"
                android:hint="GST Number *"
                android:inputType="text"
                android:maxLines="1"
                />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_above="@id/create_account"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/terms_of_service"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/agree"
            android:layout_above="@+id/termsOfService_l"
            android:layout_marginBottom="10dp"
            android:text="@string/by_clicking_create_account_you_agree_to_the_medicento"
            />

        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Medicento's "
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_toRightOf="@id/label"
                android:id="@+id/termsOfService"
                android:background="@android:color/transparent"
                android:text="@string/terms_of_service"
                android:layout_marginBottom="10dp"
                android:textColor="#0000ff"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/create_account"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp"
        android:text="Create Account"
        android:layout_width="match_parent"
        android:background="@color/official_color"
        android:layout_height="wrap_content"
        android:layout_above="@id/already_have_an_account"
        />

    <LinearLayout
        android:id="@+id/already_have_an_account"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_a_pharmacode"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:id="@+id/login_here"
            android:textColor="#1266E6"
            android:layout_marginLeft="10dp"
            />


    </LinearLayout>

</RelativeLayout>